--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,9 @@
 {
     "rewrites": [
+          {
+      "source": "/api/(.*)",
+      "destination": "https://api.adbee.in/api/$1"
+    },
         {
             "source": "/(.*)",
             "destination": "/index.html"
